# claumake

./: .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml  task.md
.github/workflows/: ci.yml  codeql.yml
claumake/: claudeutil.py  cli.py  heuristics.py  selfheal.py  validator.py  verifier.py
claumake/scan/: actions.py  context.py
docs/: README.md
tests/: test_actions_parsing_fallback.py  test_basic.py  test_claude_sdk_availability.py  test_compose_generation_default_port.py  test_compose_generation_respects_present.py  test_context_extract_commands.py  test_exposed_port_and_compose.py  test_generation_and_validation.py  test_heuristics_and_verifier.py  test_language_detection.py  test_makefile_generation_content.py  test_verifier_docker_missing_skip.py  test_verifier_start_unsupported.py
